fix: usable styling, adjusted to prevent overlap of components

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,6 @@
   box-sizing: border-box;
   align-items: stretch;
   overflow: auto;
-  padding: 10px;
   gap: 10px;
   /* max-width: 1500px; */
   justify-self: center;
@@ -71,7 +70,6 @@ div.player {
   height: 100%;
   gap: 10px;
   justify-content: space-around;
-  padding: 30px;
   box-sizing: border-box;
 }
 
